# eyeprep

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  environment.yml  eye-tracking.yml  eye-tracking_SacLoc.yml  metadata.yml  pyproject.toml
eyeprep/: __about__.py  design_coordinates_x.npy  design_coordinates_y.npy  extract_saccades.py  extract_triggers.py  eyetrack_preproc.py  generate_prediction.py  saccade_prediction.py  stats_figures.py  timeseries_figures.py
eyeprep/utils/: eyetrack_utils.py  maths_utils.py  plot_utils.py  quality_check_utils.py  sac_utils.py  screen_utils.py  settings_utils.py
src/eyeprep/: __init__.py  cli.py  pipeline.py  preprocessing.py  utils.py
tests/: intro_to_eyetracking.ipynb  qc_report.ipynb  saccade_detection.ipynb
tests/.ipynb_checkpoints/: qc_report-checkpoint.ipynb
tests/data/sub-01/ses-01/func/: sub-01_ses-01_task-SacLoc_run-01_events.json  sub-01_ses-01_task-SacLoc_run-01_events.tsv  sub-01_ses-01_task-SacLoc_run-01_recording-eye1_physio.json  sub-01_ses-01_task-SacLoc_run-02_events.tsv  sub-01_ses-01_task-SacLoc_run-02_recording-eye1_physio.json
tests/data/sub-02/ses-02/func/: sub-02_ses-02_task-SacVELoc_run-01_events.tsv  sub-02_ses-02_task-SacVELoc_run-01_recording-eye1_physio.json  sub-02_ses-02_task-SacVELoc_run-02_events.tsv  sub-02_ses-02_task-SacVELoc_run-02_recording-eye1_physio.json
tests/dev/: cgtv_parsing.py  engbert_parsing.py  main.ipynb  saccade_detection.ipynb
